<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".admin.AdminActivity">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_below="@id/imgLogo">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/chelmsfordfree"
            android:text="@string/admin"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:textSize="35dp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnViewParents"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/view_parents"
            android:fontFamily="@font/winter_self"
            android:textColor="@color/white"
            android:paddingVertical="15dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:drawableTop="@drawable/view_parents"
            android:background="@drawable/round_button"
            />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnManageParents"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/manage_parents"
        android:fontFamily="@font/winter_self"
        android:textColor="@color/white"
        android:paddingVertical="15dp"
        android:textSize="18dp"
        android:drawableTop="@drawable/manage_parents"
        android:background="@drawable/round_button"
        />
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnManageTeachers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/manage_teachers"
                android:fontFamily="@font/winter_self"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textStyle="bold"
                android:textSize="17dp"
                android:drawableTop="@drawable/manage_teachers"
                android:background="@drawable/round_button"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnManageLessons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/manage_lessons"
                android:fontFamily="@font/winter_self"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textSize="18dp"
                android:drawableTop="@drawable/manage_lessons"
                android:background="@drawable/round_button"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnManageRequests"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/manage_requests"
                android:fontFamily="@font/winter_self"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textSize="16dp"
                android:drawableTop="@drawable/manage_requests"
                android:background="@drawable/round_button"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditProfile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/edit_profile"
                android:fontFamily="@font/winter_self"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:drawableTop="@drawable/edit_profile"
                android:background="@drawable/round_button"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogout"
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/logout"
                android:fontFamily="@font/winter_self"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textSize="16dp"
                android:drawableTop="@drawable/logout"
                android:background="@drawable/round_button"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>