<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".parent.ParentActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_below="@id/imgLogo">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/chelmsfordfree"
            android:text="@string/parent"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:textSize="35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddChild"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/add_child"
                android:fontFamily="@font/winter_self"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:drawableTop="@drawable/add_child"
                android:background="@drawable/round_button"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnManageChild"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/manage_child"
                android:fontFamily="@font/winter_self"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textSize="17dp"
                android:drawableTop="@drawable/manage_kids"
                android:background="@drawable/round_button"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnViewProgress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/view_progress"
                android:fontFamily="@font/winter_self"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textStyle="bold"
                android:textSize="17dp"
                android:drawableTop="@drawable/view_progress"
                android:background="@drawable/round_button"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnViewLessons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/view_lessons"
                android:fontFamily="@font/winter_self"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textSize="18dp"
                android:drawableTop="@drawable/view_lessons"
                android:background="@drawable/round_button"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/edit_profile"
                android:fontFamily="@font/winter_self"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:drawableTop="@drawable/edit_profile"
                android:background="@drawable/round_button"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/logout"
                android:fontFamily="@font/winter_self"
                android:textColor="@color/white"
                android:paddingVertical="15dp"
                android:textSize="16dp"
                android:drawableTop="@drawable/logout"
                android:background="@drawable/round_button"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>