<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".admin.ChangeRequestStatusActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:src="@drawable/back_arrow" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@id/imgLogo">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/chelmsfordfree"
            android:text="@string/view_request"
            android:textStyle="bold"
            android:textColor="@color/pink"
            android:textSize="30dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/title"
            android:transitionName="username_tran"
            app:counterMaxLength="15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_text"
                android:inputType="textAutoComplete"
                android:textColor="@color/light_green"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDesc"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/description"
            android:transitionName="username_tran"
            app:counterMaxLength="15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_text"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:textColor="@color/light_green"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtTopic"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/topic"
            android:transitionName="username_tran"
            app:counterMaxLength="15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_text"
                android:inputType="textAutoComplete"
                android:textColor="@color/light_green"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLang"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/languge"
            android:transitionName="username_tran"
            app:counterMaxLength="15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_text"
                android:inputType="textAutoComplete"
                android:textColor="@color/light_green"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtType"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/request_type"
            android:transitionName="username_tran"
            app:counterMaxLength="15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_text"
                android:inputType="textAutoComplete"
                android:textColor="@color/light_green"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    android:orientation="horizontal">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/accept"
        android:fontFamily="@font/mechanical"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingVertical="15dp"
        android:textSize="20dp"
        android:background="@drawable/round_button"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:text="@string/reject"
        android:fontFamily="@font/mechanical"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingVertical="15dp"
        android:textSize="20dp"
        android:background="@drawable/round_button4"
        />
</LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="invisible" />

</RelativeLayout>